--- a/react-spotify/src/App.css
+++ b/react-spotify/src/App.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   background: rgb(46, 63, 87);
   background: linear-gradient(90deg, rgb(63, 86, 119) 0%, rgba(33, 44, 61, 1) 42%, rgb(15, 21, 29) 100%);
@@ -137,3 +141,23 @@ body {
   opacity: 1;
   transition: 0.3s;
 }
+
+/* .container {
+  display: flex;
+  flex-direction: row;
+  gap: var(--space-500);
+  height: 100vh;
+} */
+
+/* .content {
+  width: 100%;
+  overflow: scroll;
+} */
+
+/* .page {
+  flex-grow: 1;
+  margin-inline: auto;
+  max-width: 1536px;
+  width: 100%;
+  height: 100%;
+} */
